--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,26 @@
 .App {
   font-family:
-    "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    Fjalla One,
+    Open Sans,
+    sans-serif;
+
+  .header-container {
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 
   .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    background-color: #000000;
-    height: 50px;
+    padding: 15px;
+    height: 70px;
+    width: 85%;
 
     .logo {
-      font-size: 18px;
+      font-size: 24px;
       font-weight: bold;
       color: #ffffff;
       display: flex;
@@ -27,14 +35,10 @@
     }
 
     .nav {
-      display: flex;
-      gap: 20px;
-
       ul {
         display: flex;
-        gap: 20px;
         list-style: none;
-        margin: 0;
+        margin: 0px 100px;
         padding: 0;
       }
 
@@ -55,7 +59,7 @@
       color: #000000;
       padding: 10px;
       font-size: 24px;
-      height: 60px;
+      height: 50px;
       font-weight: bolder;
       border: 0px solid #ffffff;
 
@@ -68,11 +72,71 @@
   }
 
   .hero {
-    .hero-video {
+    margin: 0px;
+
+    .hero-image {
       width: 100%;
       height: auto;
       max-height: 500px; /* Adjust the maximum height as needed */
-      object-fit: cover;
+      object-fit: cover; /* Ensures the image covers the container without distortion */
+    }
+  }
+
+  .about {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: auto;
+    width: 100%;
+
+    h2 {
+      text-align: center;
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      text-align: center;
+      font-size: 18px;
+      max-width: 800px;
+      text-align: center;
+    }
+
+    .inst-img {
+      height: 500px;
+      width: auto;
+    }
+
+    .about-left {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      color: #ffffff;
+      background-color: #000000;
+      height: 100%;
+      width: 40%;
+      border: 5px solid #000000;
+
+      .about-left-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: top;
+        padding: 20px;
+        color: #ffffff;
+        background-color: #000000;
+        height: 100%;
+        width: 75%;
+      }
+    }
+
+    .about-right {
+      border: 5px solid #000000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 60%;
     }
   }
 }
